# agentic-harness

./: .gitignore  README.md  launch.sh  main.py  models.yaml  pyproject.toml
notebooks/: run.ipynb  test_nvidia_structured.py
src/: memory.csv
src/agents/: action.py  agent_loop.py  artifacts.py  config.py  decision.py  instrumented_llm.py  logging_config.py  mcp_client.py  mcp_server.py  memory.py  perception.py  run_cli.py  schemas.py  usage.json
src/agents/observability/: __init__.py  server.py  trace.py
src/agents/observability/static/: app.js  index.html  style.css
src/artifacts/: art_47feed47bc85  art_dad789418a66
src/llm_gateway/: client.py  config.py  db.py  embedders.py  gateway_v3.db  main.py  providers.py  requirements.txt  router.py  schemas.py
src/llm_gateway/static/: dashboard.html
src/mech_interp/: run.py
src/mech_interp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
