[project]
name = "mech_interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "torch==2.9.1",
    "transformers==4.57.1",
    "jsonargparse==4.46.0",
    "overrides==7.7.0",
    "textstat==0.7.12",
    "ipykernel==7.2.0",
    "matplotlib==3.10.8",
    "pytest==9.0.2",
    "scipy==1.15.3",
    "requests==2.32.5",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "airportsdata==20260315",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.100.0",
    "anyio==4.12.1",
    "apache-tvm-ffi==0.1.11",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "blobfile==3.0.0",
    "build==1.5.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "compressed-tensors==0.15.0.1",
    "contourpy==1.3.2",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.3.3",
    "cuda-python==12.9.0",
    "cycler==0.12.1",
    "datasets==4.8.5",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "decord2==3.3.0",
    "dill==0.4.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "einops==0.8.2",
    "executing==2.2.1",
    "fastapi==0.136.1",
    "filelock==3.20.3",
    "flashinfer-cubin==0.6.3",
    "flashinfer-python==0.6.3",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "gguf==0.19.0",
    "grpcio==1.80.0",
    "grpcio-health-checking==1.80.0",
    "grpcio-reflection==1.80.0",
    "h11==0.16.0",
    "hf-transfer==0.1.9",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "interegular==0.3.3",
    "ipython==8.38.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lark==1.3.1",
    "llguidance==0.7.30",
    "loguru==0.7.3",
    "lxml==6.1.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "modelscope==1.36.3",
    "mpmath==1.3.0",
    "msgspec==0.21.1",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ninja==1.13.0",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cudnn-frontend==1.23.0",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-cutlass-dsl==4.3.5",
    "nvidia-ml-py==13.595.45",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "openai==2.6.1",
    "openai-harmony==0.0.4",
    "orjson==3.11.9",
    "outlines==0.1.11",
    "outlines-core==0.1.26",
    "packaging==26.0",
    "pandas==3.0.2",
    "parso==0.8.6",
    "partial-json-parser==0.2.1.1.post7",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prometheus-client==0.25.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-spy==0.4.2",
    "pyarrow==24.0.0",
    "pybase64==1.4.3",
    "pycountry==26.2.16",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "pyphen==0.17.2",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.27",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "quack-kernels==0.2.4",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "setproctitle==1.3.7",
    "setuptools==82.0.0",
    "sgl-kernel==0.3.21",
    "sglang==0.5.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smg-grpc-proto==0.4.7",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "stack-data==0.6.3",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tiktoken==0.12.0",
    "timm==1.0.16",
    "tokenizers==0.22.2",
    "torch-c-dlpack-ext==0.1.5",
    "torch-memory-saver==0.0.9",
    "torchao==0.9.0",
    "torchaudio==2.9.1",
    "torchcodec==0.8.0",
    "torchvision==0.24.1",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triton==3.5.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "uvloop==0.22.1",
    "wcwidth==0.6.0",
    "xgrammar==0.1.27",
    "xxhash==3.7.0",
    "yarl==1.23.0",
    "bitsandbytes>=0.49.2",
    "mcp[cli]>=1.27.1",
    "pyautogui>=0.9.54",
    "faiss-cpu>=1.14.2",
    "sentence-transformers>=5.5.1",
    "rank-bm25>=0.2.2",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "sphinx",
    "sphinx_rtd_theme",
    "black",
    "sphinxcontrib-mermaid",
]

[tool.uv]
override-dependencies = [
    "nvidia-cudnn-cu12==9.16.0.29",
]

[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
